--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .text-outline{
+        -webkit-text-stroke: 2px rgb(0, 0, 0);
+    }
+}
+
+@layer components {
+    .btn-primary {
+        @apply bg-darkGreen rounded-full text-white hover:scale-110 duration-200 font-semibold px-4 py-2 
+    }
+}
